[gd_scene load_steps=12 format=2]

[ext_resource path="res://Character/Monsters/porcupine.png" type="Texture" id=1]
[ext_resource path="res://Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://gold.png" type="Texture" id=3]
[ext_resource path="res://Mission/fr_mission.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.309804, 0.203922, 0.203922, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.00784314, 0.388235, 0.12549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0.352941, 0.0509804, 1 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.364706, 0.364706, 0.364706, 1 )

[node name="Missioni" type="Control"]
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel"]
position = Vector2( 320, 96 )
scale = Vector2( 0.426941, 0.426941 )
texture = ExtResource( 1 )
flip_h = true

[node name="Title" type="Label" parent="Panel"]
margin_right = 336.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Hunting party"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reward" type="Label" parent="Panel"]
margin_left = 312.0
margin_right = 368.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.831373, 0.686275, 0.215686, 1 )
text = "100 "
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gold sign" type="Sprite" parent="Panel/Reward"]
position = Vector2( 72, 22 )
scale = Vector2( 0.0323905, 0.0323905 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Description" type="Label" parent="Panel"]
margin_left = 16.0
margin_top = 40.0
margin_right = 248.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 4 )
text = "Fight 3 angry porcupines"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -44.0
margin_right = 144.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="Confirm"]
margin_left = 16.0
margin_top = 32.0
margin_right = 136.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="Confirm"]
margin_left = 152.0
margin_top = 32.0
margin_right = 272.0
margin_bottom = 72.0
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 6 )
text = "Go back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Confirm"]
margin_top = 3.0
margin_right = 288.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 6 )
text = "Start Mission ?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="Panel" to="." method="gui_input"]
[connection signal="pressed" from="Confirm/Yes" to="." method="start_mission"]
[connection signal="pressed" from="Confirm/No" to="." method="hide_confirm"]
